docs/tests/parser/structs/valid/GenericStructBasic.src
struct Box<T> {
    let T value;
}
