docs/tests/parser/structs/invalid/GenericStructMissingCloseAngle.src
struct Box<T {
    let int x;
}
